# cfb-analytics

./: .env.example  .gitignore  CLAUDE.md  README.md  drizzle.config.ts  index.html  next.config.ts  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
docs/: DATABASE.md  PERFORMANCE_BASELINES.md  SPEC.md  SPRINT_3_PLAN.md  SPRINT_3_TASKS.md  SPRINT_4_TASKS.md  SPRINT_5.5_PLAN.md  SPRINT_5_DATA_AUDIT.md  SPRINT_5_TASKS.md  SPRINT_6_TASKS.md  SPRINT_PLAN.md  sprint_7_tasks.md
pipelines/: README.md  load_oklahoma.py  pyproject.toml
pipelines/sources/: __init__.py  cfbd.py
scripts/: audit-epa-data.ts  check-drive-results.ts  import-additional-data.js  import-csv-curl.js  import-csv.js  import-rankings.js  ingest-data.js  ingest-recruiting.ts  ingest-roster.ts  ingest-transfers.ts  test-api.js  test-drive-queries.ts  test-epa-queries.ts  test-play-type-mapping.ts  test-trend-queries.ts  validate-sprint5-metrics.ts  validate-sprint6.ts  validate-task-5.5.ts
src/: App.tsx  index.css  vite-env.d.ts
src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
src/components/: ErrorState.tsx  Layout.tsx  error-boundary.tsx
src/hooks/: use-online-status.ts  useDelayedLoading.ts
src/lib/: cache.ts  logger.ts  query-client.ts  query-keys.ts  supabase.ts
src/pages/: AdvancedMetrics.tsx  ConferenceComparison.tsx  Dashboard.tsx  GameAnalytics.tsx  LiveScores.tsx  PlayerStats.tsx  TeamRankings.tsx
src/providers/: query-provider.tsx
src/services/: api.ts
src/types/: cfb.ts
src/utils/: format.ts
supabase/: schema.sql
(+125 files in other folders)
